--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,20 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "layouts/navbar" %>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <%= render "layouts/flash_messages" %>
+          <%= yield %>
+        </div>
+
+        <div class="col-md-4">
+          <%# sidebar %>
+        </div>
+      </div>
+      <hr>
+      <%= render "layouts/footer" %>
+    </div>
   </body>
 </html>
