--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,5 +10,8 @@
   <%= @post.body %>
 </p>
 
+<%= render @post %>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path %> |
+<%= link_to 'Destroy', @post, method: :delete, data: { confirm: "Are you sure?" } %>
