--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :body %>
+    <%= f.input :str_tags, label: 'Add tags separated by spaces'  %>
   </div>
 
   <div class="form-actions">
