#8 - View added for tags

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,4 +6,8 @@
   <p><span class="glyphicon glyphicon-time"></span> <%= post.posted_on %></p>
   <hr>
   <%= post.body %>
+
+  <div class="tags">
+    <%= render post.tags %>
+  </div>
 <% end %>
