#10 - Tag navigation ability added

--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -1,1 +1,2 @@
 <span class="label label-info"><%= tag.name %></span>
+<%= link_to tag.name, tag_filter_path(tag.name), class: "label label-info" %>
