#12 - Bootstrap tagsinput added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap-tagsinput";
 @import "scaffolds";
 @import "posts";
 @import "tags";
