--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,10 +4,16 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :body %>
-    <%= f.input :str_tags, label: 'Add tags separated by spaces'  %>
+    <%= f.input :str_tags, label: 'Add tags separated by spaces', input_html: { id: "tags" }  %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
 <% end %>
+
+<script type="text/javascript">
+  $('#tags').tagsinput({
+    confirmKeys: [32] // spacebar
+  })
+</script>
