--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-tagsinput";
+@import "jqcloud";
 @import "scaffolds";
 @import "posts";
 @import "tags";
