--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         </div>
 
         <div class="col-md-4">
-          <%# sidebar %>
+          <%= render "layouts/tagcloud" %>
         </div>
       </div>
       <hr>
